# Database

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Database/: CMakeLists.txt  Database.rc  Example.csv  Example.txt  resource.h  test.db
Database/src/: ClassDiagram.cd  Database.cpp  Database.h  DatabaseInterface.cpp  DatabaseInterface.h  Menu.cpp  Menu.h  Record.cpp  Record.h  RecordsManager.cpp  RecordsManager.h  TextTable.cpp  TextTable.h  main.cpp
